Changes to lab2.rar

--- a/lab2/site.html
+++ b/lab2/site.html
@@ -5,10 +5,8 @@
     <title>Lab2.Animations</title>
   </head>
   <body>
-    <div style="margin:0 auto; width:800px"><img src="result.jpg" width="800px" height="600px" alt="Result">
-    <img src="text.gif" alt="Text">
-    <br>
-    <img src="name.gif" alt="Name">
+    <div style="margin:0 auto; width:800px">
+      <img src="result-w-animated-text.gif" width="800px" height="600px" alt="Result">
   </div>
   </body>
 </html>
